--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,7 +29,7 @@ dist.jar=${dist.dir}/CalcSerial.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.RXTXcomm.jar=../Librerias/rxtx-2.2pre2-bins/RXTXcomm.jar
+file.reference.RXTXcomm.jar=C:\\Users\\paaf-\\Desktop\\RXTXcomm.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -37,6 +37,7 @@ javac.classpath=\
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
+javac.external.vm=false
 javac.processorpath=\
     ${javac.classpath}
 javac.source=1.8
@@ -61,7 +62,7 @@ main.class=model.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=JDK_1.8__32bit_
+platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
