--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,7 +29,7 @@ dist.jar=${dist.dir}/CalcSerial.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.RXTXcomm.jar=dist/RXTXcomm.jar
+file.reference.RXTXcomm.jar=C:\\Users\\Camilo\\Documents\\Programing\\Java\\Librerias\\rxtx-2.2pre2-bins\\RXTXcomm.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -62,14 +62,14 @@ main.class=model.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=JDK_1.8__x86_
+platform.active=JDK_1.8__32bit_
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
 # Space-separated list of JVM arguments used when running the project.
 # You may also define separate properties like run-sys-prop.name=value instead of -Dname=value.
 # To set system properties for unit tests define test-sys-prop.name=value:
-run.jvmargs=-Djava.library.path="D:\\Users\\Francisco\\Documents\\CalcSerial\\dist;%PATH%"
+run.jvmargs=-Djava.library.path="C:\\Users\\Camilo\\Documents\\Programing\\Java\\Librerias\\rxtx-2.2pre2-bins\\win32;%PATH%"
 run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
